# ThermoLM

./: .gitignore  COMPILER_ROADMAP.md  LICENSE  README.md  STATUS.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-jax.txt
data/: __init__.py
docs/: RESEARCH_ROADMAP.md
examples/: README.md  lm_on_thrml.ipynb
experimental/: README.md  cleanup_script.py  compare_models.py  train_discrete_runpod.py  train_hybrid_runpod.py  wikitext_loader.py
results/: sweep_budget.csv
runpod/: README_RUNPOD.md  setup.sh  train.sh  train_distributed.sh
scripts/: dtm_ising_demo.py  eval_charlm.py  exp_sweep_budget.py  generate_charlm.py  runpod_setup.sh  train_charlm.py  train_distributed.py  train_tinyshakespeare.py
tests/: conftest.py
tests/experimental/: README.md  test_adaln.py  test_analysis.py  test_base_config.py  test_base_loader.py  test_base_trainer.py  test_continuous_encoder.py  test_d3pm.py  test_data.py  test_diffusion.py  test_discrete_edlm.py  test_discrete_energy.py  test_dtm_components.py  test_edlm.py  test_edlm_integration.py  test_ema.py  test_energy_function.py  test_fsq.py  test_hybrid_edlm.py  test_hybrid_energy.py  test_memory.py  test_performance.py  test_preprocessing.py  test_quantization.py  test_reproducibility.py  test_rotary.py  test_sampler.py  test_thrml_discrete.py  test_training.py
tests/unit/: test_chain_crf.py  test_diffusion_lm.py  test_ising_correctness.py  test_thrml_ml.py
thermolm_jax/: __init__.py
thermolm_jax/config/: __init__.py  base_config.py  model.py  tsu.py
thermolm_jax/data/: __init__.py  char_tokenizer.py  wikitext_jax.py
thermolm_jax/evaluation/: __init__.py  analysis.py  benchmark.py  compare.py  energy_landscape.py  mixing_time.py
thermolm_jax/models/: __init__.py  adaln.py  binary_autoencoder.py  chain_crf.py  connectivity.py  diffusion_lm.py  diffusion_schedule.py  discrete_edlm.py  edlm.py  energy_function.py  factor_weight_network.py  forward_coupling.py  hybrid_edlm.py  quadratic_ebm.py  quantization.py  rotary.py  sampler.py  thrml_discrete.py  thrml_quadratic.py
thermolm_jax/sampling/: __init__.py  chain_gibbs_jax.py  chain_mrf_thrml.py  chromatic_gibbs.py
thermolm_jax/training/: __init__.py  (+10 more)
(+27 files in other folders)
